--- a/Data_cleaning_o2saturation.ipynb
+++ b/Data_cleaning_o2saturation.ipynb
@@ -2,7 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'encoding': 'ascii', 'confidence': 1.0, 'language': ''}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import seaborn as sns\n",
+    "import chardet\n",
+    "\n",
+    "file = 'o2Saturation.csv'\n",
+    "with open( file, 'rb') as rawdata :\n",
+    "    encoding_file = chardet.detect( rawdata.read(1000000) )\n",
+    "print( encoding_file )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -96,20 +122,13 @@
        "[3585 rows x 1 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import math\n",
-    "import seaborn as sns\n",
-    "\n",
-    "\n",
-    "file = 'o2Saturation.csv'\n",
-    "file_read = pd.read_csv( file )\n",
+    "file_read = pd.read_csv( file, encoding='ascii' )\n",
     "o2_data = pd.DataFrame( file_read )\n",
     "o2_data"
    ]
